Bug 338513 - NM applet significantly delays KDE logon
Summary: NM applet significantly delays KDE logon
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-24 08:40 UTC by Ralf Jung
Modified: 2024-12-23 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Jung 2014-08-24 08:40:45 UTC
Steps to reproduce:
* Reboot the system
* Login to KDE

Actual behaviour (reproducible):
* The splash screen shows the first three icons, but after showing the blue globe, it stops
* Only ~10sec later, logging in goes on
* When the splash screen disappears, there's a window asking for the password of a wireless network (even though I stored that PW in the wallet)
* When I "Cancel" that window, the KWallet password dialogue appears

Expected behaviour:
* Login shouldn't stall
* It should immediately ask for the KWallet password

Additional information:
Everything worked fine with Plasma-NM 0.9.3.3. This is a regression in the latest version. I verified this by downgrading back to 0.9.3.3.
I am using Debian testing (amd64), network-manager 0.9.10.0, libnetworkmanagerqt 0.9.8.2.
Comment 1 Lukáš Tinkl 2014-09-07 08:54:26 UTC
Git commit e00e4ce70ca07dc75cb4cd3434d92f589edf99c8 by Lukáš Tinkl.
Committed on 06/09/2014 at 15:54.
Pushed by lukas into branch 'master'.

delay the notifications and secret agent initializations until needed

M  +21   -20   kded/service.cpp
M  +3    -3    kded/service.h
M  +3    -0    libs/handler.cpp
M  +3    -0    libs/handler.h

http://commits.kde.org/plasma-nm/e00e4ce70ca07dc75cb4cd3434d92f589edf99c8
Comment 2 Lukáš Tinkl 2014-09-07 08:56:52 UTC
Git commit d005734280d65a3d89a88a3393019bfbbe15b0c0 by Lukáš Tinkl.
Committed on 06/09/2014 at 15:54.
Pushed by lukas into branch 'Plasma/5.0'.

delay the notifications and secret agent initializations until needed

M  +21   -20   kded/service.cpp
M  +3    -3    kded/service.h
M  +3    -0    libs/handler.cpp
M  +3    -0    libs/handler.h

http://commits.kde.org/plasma-nm/d005734280d65a3d89a88a3393019bfbbe15b0c0
Comment 3 Jan Grulich 2014-09-07 09:21:54 UTC
Git commit 81839a1566d0c0209a308d71b03837f996a19c96 by Jan Grulich, on behalf of Lukáš Tinkl.
Committed on 06/09/2014 at 15:54.
Pushed by grulich into branch '0.9.3'.

delay the notifications and secret agent initializations until needed
REVIEW:120082

M  +21   -19   kded/service.cpp
M  +3    -3    kded/service.h
M  +3    -0    libs/handler.cpp
M  +3    -0    libs/handler.h

http://commits.kde.org/plasma-nm/81839a1566d0c0209a308d71b03837f996a19c96
Comment 4 Ben Cooksley 2024-12-23 18:23:47 UTC
Bulk transfer as requested in T17796