delay the notifications and secret agent initializations until needed

BUG: 338513